# CodingTrain

./: .gitignore  README.md
Python/animated_circle_packing/: animated_circle_packing.py  animated_circle_packing2.py  circle.py  main.py
Python/double_pendulum/: double_pendulum.py  main.py
Python/earthquakes/: earthquakes_2d.py  earthquakes_GL.py  main.py  marker.py
Python/fireworks/: config.py  firework.py  main.py  particle.py
Python/flocking/: boid.py  flocking.py  main.py
Python/floyd_steinberg_dithering/: floyd_steinberg_dithering.py  main.py
Python/fourier_series/: dolphin200.py  dolphin500.py  fourier_series.py  fourier_transform_pattern.py  fourier_transform_pattern_complex.py  fourier_transform_user.py  fourier_transform_user_complex.py  main.py
Python/fractals/: julia.py  julia_GL.py  main.py  mandelbrot.py  mandelbrot_GL.py
Python/heart_curve/: heart_curve.py  main.py
Python/kinematics/: forward_kinematics.py  forward_segment.py  inverse_kinematics.py  inverse_kinematics_fixed_multiple.py  inverse_kinematics_fixed_point.py  (+4 more)
Rust/: Cargo.toml
Rust/src/: main.rs
Rust/src/double_pendulum/: mod.rs  rod.rs
Rust/src/fireworks/: firework.rs  mod.rs
Rust/src/fourier_series/: epicycles.rs  mod.rs
Rust/src/julia/: custom_material.wgsl  mod.rs
Rust/src/landscape/: mod.rs
Rust/src/mandelbrot/: custom_material.wgsl  mod.rs
Rust/src/metaballs/: custom_material.wgsl  mod.rs
Rust/src/phyllotaxis/: mod.rs
Rust/src/plinko/: mod.rs
Rust/src/ray_casting/: mod.rs  ray_caster.rs
Rust/src/starfield/: mod.rs
Rust/src/starfield_3d/: mod.rs
(+65 files in other folders)
