[package]
name = "coding_train"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
rand = "*"
bevy-inspector-egui = "0.26.0"
bevy_hanabi = "0.12.2"
bevy_shader_utils = "0.7.0"

# Enable a small amount of optimisation in the dev profile
[profile.dev]
opt-level = 1

# Enable a large amount of optimisation in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
